--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <label class="config-label">Level</label>
           <input type="radio" name="level" value="easy"> <label class="config-radio-label">Easy</label>
           <input type="radio" name="level" value="medium"> <label class="config-radio-label">Medium</label>
-          <input type="radio" name="level" value="nightmare"> <label class="config-radio-label">Nightmare</label>
+          <input type="radio" name="level" value="nightmare"> <label class="config-radio-label">Medium+</label>
         </form>
         <form class="config-form">
           <label for="fname" class="config-label">Power pellet duration</label> 
