--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body style="background-color:black;"></body>>
     <div class="header"> 
       <h1 id="title"> The nightmare Pacman </h1> 
-      <span> Press UP, DOWN, LEFT, RIGHT arrows to play </span> </div>
+      <span> Press UP, DOWN, LEFT, RIGHT arrows on your KEYBOARD to play </span> </div>
     <div class="main">
       <div class="grid-container">
         <div class="grid"></div>
