--- a/game.html
+++ b/game.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Pac-man</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="game.css">
+    <script src="game.js" charset="utf-8"></script>
   </head>
   <body style="background-color:black;"></body>>
     <div class="header"> 
