--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
                 padding: 20px;
                 font-weight: 900;
                 font-size: large;
+                margin-top: 50px;
             }
-            .pacman {
-                display: block;
-            }
-            .pacman-container {
-                display: flex;
-                align-items: center;
-                justify-content: space-around;
-                margin-bottom: 50px;
+            .start-btn:hover {
+                background-color: rgb(13, 45, 94);
+                border-color: rgb(11, 11, 134);
             }
         </style>
     </head>
@@ -38,9 +34,7 @@
         <h3 class="description">
             The hardest pacman game ever made
         </h3>
-        <div class="pacman-container">
-            <img src="pacman.jpg" alt="Girl in a jacket" width="440" height="400" class="pacman"> 
-        </div>
+        <iframe src="https://giphy.com/embed/jxJjBMvqEvMSA" width="480" height="349" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/nostalgia-pacman-love-jxJjBMvqEvMSA" style="color: rgb(253, 207, 2);">via GIPHY</a></p>
         <button onclick="startPlaying()" class="start-btn">
             Click here to begin your nightmare
         </button>
